[metadata]
name = plcloud-ceilometer
url = http://launchpad.net/ceilometer
summary = OpenStack Telemetry
description-file =
    README.rst
author = Jenner.luo
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/ceilometer/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[extras]
gnocchi =
    gnocchiclient>=3.1.0,<4.0.0 # Apache-2.0
mongo =
    pymongo!=3.1,>=3.0.2 # Apache-2.0
postgresql =
    psycopg2>=2.5 # LGPL/ZPL
mysql =
    PyMySQL>=0.6.2 # MIT License

[entry_points]
ceilometer.notification =
    billing-notice = plcloud-ceilometer.billing.notifications.ProcessBillingNotifications